Alignment issues

--- a/findly-builder/src/app/components/index/index.component.scss
+++ b/findly-builder/src/app/components/index/index.component.scss
@@ -522,7 +522,7 @@
                         .mat-input-element{
                             margin: 0;
                             border: 0;
-                            height: 36px;
+                            height: 34px;
                             padding-left: 10px;
                             &:focus{   
                                 border: 0 !important;                             
